  - djm@cvs.openbsd.org 2007/10/24 03:44:02      [scp.c]      factor out network read/write into an atomicio()-like function, and      use it to handle short reads, apply bandwidth limits and update      counters. make network IO non-blocking, so a small trickle of      reads/writes has a chance of updating the progress meter; bz #799      ok dtucker@